--- a/fhsa/v4/lifeevents.html
+++ b/fhsa/v4/lifeevents.html
@@ -536,7 +536,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Allowable FHSA deduction</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#allowablefhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#allowablefhsa"></section>
 </div>
 </section>
 
@@ -545,7 +545,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Annual FHSA limit</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annualfhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annualfhsa"></section>
 </div>
 </section>
 
@@ -554,7 +554,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Annuitant</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annuitant"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annuitant"></section>
 </div>
 </section>
 
@@ -563,7 +563,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Common-law partner</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#comlaw"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#comlaw"></section>
 </div>
 </section>
 
@@ -572,7 +572,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Designated amounts</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#designatedamounts"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#designatedamounts"></section>
 </div>
 </section>
 
@@ -581,7 +581,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Excess FHSA amount</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#excessfhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#excessfhsa"></section>
 </div>
 </section>
 
@@ -590,7 +590,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Exempt period</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#exemptperiod"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#exemptperiod"></section>
 </div>
 </section>
 
@@ -599,7 +599,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Fair market value (FMV)</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fmv"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fmv"></section>
 </div>
 </section>
 
@@ -608,7 +608,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">FHSA carryforward</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsacarry"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsacarry"></section>
 </div>
 </section>
 
@@ -617,7 +617,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">FHSA deduction</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsadeduction"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsadeduction"></section>
 </div>
 </section>
 
@@ -626,7 +626,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">FHSA participation room</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsapartroom"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsapartroom"></section>
 </div>
 </section>
 
@@ -635,7 +635,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">First-time home buyer</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#firsttimehb"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#firsttimehb"></section>
 </div>
 </section>
 
@@ -644,7 +644,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Holder</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#holder"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#holder"></section>
 </div>
 </section>
 
@@ -653,7 +653,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Issuer</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#issuer"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#issuer"></section>
 </div>
 </section>
 
@@ -662,7 +662,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Lifetime FHSA limit</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#lifetimefhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#lifetimefhsa"></section>
 </div>
 </section>
 
@@ -671,7 +671,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Maximum participation period</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#maxpart"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#maxpart"></section>
 </div>
 </section>
 
@@ -680,7 +680,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Non-qualified investment</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#nonqualinv"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#nonqualinv"></section>
 </div>
 </section>
 
@@ -689,7 +689,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Property</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#propfhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#propfhsa"></section>
 </div>
 </section>
 
@@ -698,7 +698,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Qualified donee</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualdonee"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualdonee"></section>
 </div>
 </section>
 
@@ -707,7 +707,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Qualified investment</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualinv"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualinv"></section>
 </div>
 </section>
 
@@ -716,7 +716,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Qualifying home</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualhome"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualhome"></section>
 </div>
 </section>
 
@@ -725,7 +725,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Qualifying individual</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualindividual"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualindividual"></section>
 </div>
 </section>
 
@@ -734,7 +734,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Qualifying withdrawal</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualwith"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualwith"></section>
 </div>
 </section>
 
@@ -743,7 +743,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Registered retirement income fund (RRIF)</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrif"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrif"></section>
 </div>
 </section>
 
@@ -752,7 +752,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Registered retirement saving plan (RRSP)</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrsp"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrsp"></section>
 </div>
 </section>
 
@@ -761,7 +761,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Spouse</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#spouse"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#spouse"></section>
 </div>
 </section>
 
@@ -770,7 +770,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Successor holder</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#successorholder"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#successorholder"></section>
 </div>
 </section>
 
@@ -779,7 +779,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Survivor</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#survivor"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#survivor"></section>
 </div>
 </section>
 
@@ -788,7 +788,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Unused FHSA contributions</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsacont"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsacont"></section>
 </div>
 </section>
 
@@ -797,7 +797,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Unused FHSA participation room</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsapart"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsapart"></section>
 </div>
 </section>
 
@@ -806,7 +806,7 @@ Death and FHSAs</h1>
 <h3 class="modal-title">Unused RRSP deduction room</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedrrsp"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedrrsp"></section>
 </div>
 </section>
 
