--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -312,7 +312,7 @@
  <section>
 	 <section>
 		 <h3>You are a first-time home buyer</h3>
-		 <p>You are a first-time home buyer for the purpose of opening an FHSA if:</p>
+		 <p>You are a first-time home buyer for the purpose of opening an FHSA if, when you open the account:</p>
 		 <fieldset>
                   <ul class="checkbox-zebra gc-chckbxrdio">
 
