add content claims

--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -189,7 +189,11 @@
 	  
 	  
 	 
-    <p><strong>Taxable income</strong> is your income after various deductions, credits, and exemptions have been applied. It is <strong>line 26000</strong> of your Income Tax and Benefit Return.</p>
+    <p><strong>Taxable income</strong> is <strong>line 26000</strong> of your Income Tax and Benefit Return. It is your income after various deductions, credits, and exemptions have been applied.</p>
+	  <p>If you are eligible, you can claim various deductions, credits, and exemptions to reduce the amount of tax you need to pay.</p>
+
+	  <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/deductions-credits-expenses.html" target="_blank">All deductions, credits, and expenses</a></p>
+	 
 	  <p>Your <strong>combined tax rate</strong> is the total tax you will pay for the calendar year.</p>
 	  <p>Generally, most employers will deduct both federal income tax and provincial or territorial income tax directly from your pay. You can choose to have more tax deducted from your pay by completing a Form TD1 and providing it to your employer. Increasing your income tax deduction can avoid you having to pay a large amount of tax at the end of the tax year.</p>
   <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/income-tax/increasing-income-tax-deductions.html" target="_blank">Increasing income tax deductions</a></p>
