--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -190,7 +190,7 @@
 	  
 	 
     <p><strong>Taxable income</strong> is <strong>line 26000</strong> of your Income Tax and Benefit Return. It is your income after various deductions, credits, and exemptions have been applied.</p>
-	  <p>If you are eligible, you can claim various deductions, credits, and exemptions to reduce the amount of tax you need to pay.</p>
+	  <p>You may be eligible to claim various deductions, credits, and exemptions to reduce the amount of tax you need to pay.</p>
 
 	  <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/deductions-credits-expenses.html" target="_blank">All deductions, credits, and expenses</a></p>
 	 
