work 1 prov; live another

--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -221,6 +221,16 @@
     <h2 id="toc2">Provincial and territorial rates for 2023</h2>
     <p>Provincial and territorial tax rates vary across Canada.</p>
     <p>Your provincial or territorial tax rate is determined by the location in which you are living on December 31 of the tax year.</p>
+<details>
+<summary>If you live in one province or territory but work in another</summary>
+	<p>Most employers will consider you a resident in the region which you work, when deducting provincial or territorial tax from your pay. </p>
+	<p>You are <strong>also</strong> required to pay provincial or territorial taxes where you reside. </p>
+	<p>For example, an Ontario resident working in Quebec will generally have deductions from their pay which follow Quebec’s provincial taxes. They must also pay Ontario provincial taxes when filing their Income Tax and Benefit Return. </p>
+</details>
+
+
+
+	
     <div class="wb-frmvld fieldflow-lg max-content">
       <form>
         <div class="wb-fieldflow" data-wb-fieldflow="{&quot;noForm&quot;: true, &quot;isoptional&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;, &quot;reset&quot;: {&quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.province-display&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}}">
