--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -223,12 +223,12 @@
     <p>Your provincial or territorial tax rate is determined by the location in which you are living on December 31 of the tax year.</p>
 <details>
 <summary>If you live in one province or territory but work in another</summary>
-	<p>Most employers will consider you a resident in the region which you work, when deducting provincial or territorial tax from your pay. </p>
+	<p>Most employers will consider you a resident in the region which you work when deducting provincial or territorial tax from your pay. </p>
 	<p>You are <strong>also</strong> required to pay provincial or territorial taxes where you reside. </p>
-	<p>For example, an Ontario resident working in Quebec will generally have deductions from their pay which follow Quebec’s provincial taxes. They must also pay Ontario provincial taxes when filing their Income Tax and Benefit Return. </p>
+	<p>For example, an Ontario resident working in Quebec will generally have their pay taxed following Quebec’s provincial taxes. They must also pay Ontario provincial taxes when filing their Income Tax and Benefit Return. </p>
 </details>
 
-
+<br>
 
 	
     <div class="wb-frmvld fieldflow-lg max-content">
