--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -846,7 +846,7 @@ margin-left: 38px;
 
 <h3>Pay by wire transfer or internationally issued credit card</h3>
 <p>Whether you are an individual or a corporation, you might not have a Canadian bank account.</p>
-		 <p>In that case, you may pay using a wire transfer or an internationally issued credit card.</p> For more information, refer to: <a href="/en/revenue-agency/services/about-canada-revenue-agency-cra/pay-wire-transfer-non-residents.html">Pay without a Canadian bank account</a>.</p> 
+		 <p>In that case, you may pay using a wire transfer or an internationally issued credit card.</p> For more information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/pay-wire-transfer-non-residents.html">Pay without a Canadian bank account</a>.</p> 
 
 <h3>Pay by cheque</h3>
 
