--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -249,9 +249,9 @@
                   <ul class="checkbox-lg checkbox-zebra gc-chckbxrdio">
                      <li class="checkbox">
                         <input type="checkbox" id="eg1" name="action-checkbox">
-                        <label for="eg1">You must be a first time home buyer for the purposes of making a withdrawal</label>
+                        <label for="eg1">You must be a first time home buyer for the purposes of making a withdrawal
                         
-                           <div class="alert alert-info">
+                           <div class="mrgn-tp-md alert alert-info">
 	<p>A &quot;first-time home buyer&quot; for the purpose of making a qualifying withdrawal is <strong>different</strong> than a &quot;first-time home buyer&quot; for the purpose of opening an FHSA.</div>
 <p>For purposes of a qualifying withdrawal, you will be considered to be a first-time home buyer if you did not live in a qualifying home (or what would be a qualifying home if located in Canada) as your principal place of residence that you owned or jointly owned at any time in:</p>
  <ul class="cnjnctn-type-or mrgn-tp-0">
@@ -260,7 +260,7 @@
 
                                     </li>
                                     <li class="cnjnctn-col">
-                                       the previous 4 calendar years </li></ul>
+                                       the previous 4 calendar years </li></ul></label>
 	 
 
 				
