--- a/fhsa/v4/index.html
+++ b/fhsa/v4/index.html
@@ -130,9 +130,9 @@
             <h3 class="provisional from">From:</h3>
         </div>
         <div class="provisional contributors col-md-auto">
-            
-               <a href="/en/revenue-agency.html">Canada Revenue Agency</a>
-            
+            <ul>
+               <li><a href="/en/revenue-agency.html">Canada Revenue Agency</a></li>
+            </ul>
         </div>
     </section>
     <section class="col-md-4 mrgn-bttm-sm">
