--- a/fhsa/v4/index.html
+++ b/fhsa/v4/index.html
@@ -46,7 +46,7 @@
          });
       </script>
       <main role="main" property="mainContentOfPage" class="container experimental">
-
+<div class="mwsgeneric-base-html parbase section">
   <h1 property="name" id="wb-cont">First Home Savings Account (FHSA)</h1>
   <div class="container">
    
@@ -141,7 +141,7 @@
     </section>
 </div>
 
-
+</div>
 </div>
 <div class="mwsgeneric-base-html parbase section">
 
