--- a/fhsa/v4/index.html
+++ b/fhsa/v4/index.html
@@ -222,6 +222,7 @@ Other reason
 
 
 </div>
+         <div id="def-preFooter"> </div>
          <!-- Write closure template -->
          <script type="text/javascript">
             var defPreFooter = document.getElementById("def-preFooter");
