--- a/fhsa/v4/definitions.html
+++ b/fhsa/v4/definitions.html
@@ -777,119 +777,155 @@
 
 </div>
    
-
-
-
-
-
-
-
-	  
-<div class="mwsgeneric-base-html parbase section">
-
-
-
+  <div class="container">
     <div class="row row-no-gutters mrgn-tp-xl">
-<div class="col-sm-7 col-lg-6">
-<section class="gc-pg-hlpfl provisional">
-<div class="well mrgn-bttm-0">
-<form id="gc-pg-hlpfl-frm" action="/gc/services/generateemail" method="post" autocomplete="off" class="provisional wb-postback" data-wb-postback="{&quot;success&quot;:&quot;.gc-pg-hlpfl-thnk&quot;,&quot;content&quot;:&quot;#gc-pg-hlpfl-frm&quot;}">
-<input type="hidden" name="institutionopt" value="CRA">
-<input type="hidden" name="themeopt" value="Taxes">
-<input type="hidden" name="sectionopt" value="FHSA">
-<input type="hidden" name="pageTitle" value="First Home Savings Account (FHSA)">
-<input type="hidden" name="emailTemplate" value="servcan/gc-pagesuccessen">
-<div class="gc-pg-hlpfl-btn">
-<div class="row row-no-gutters">
-<div class="col-xs-12 col-sm-7 mrgn-tp-sm">
-<h2 class="mrgn-tp-sm h5">Did you find what you were looking for?</h2>
-</div>
-<div class="col-xs-8 col-sm-5 text-right">
-<button type="submit" name="helpful" value="Yes" class="btn btn-primary" data-gc-analytics-wtph>Yes</button>
-<button type="button" class="btn btn-primary mrgn-lft-sm nojs-hide" data-wb-doaction="[{&quot;action&quot;:&quot;removeClass&quot;,&quot;source&quot;:&quot;.gc-pg-hlpfl-no&quot;,&quot;class&quot;:&quot;nojs-show&quot;},
-{&quot;action&quot;:&quot;addClass&quot;,&quot;source&quot;:&quot;.gc-pg-hlpfl-btn&quot;,&quot;class&quot;:&quot;hide&quot;}]" data-gc-analytics-wtph-no>No</button>
-</div>
-</div>
-</div>
-<p class="h3 hidden nojs-show">If not, tell us why:</p>
-<div class="gc-pg-hlpfl-no nojs-show">
-<fieldset>
+      <div class="col-sm-7 col-lg-6">
+        <section class="gc-pg-hlpfl provisional">
+          <div class="well mrgn-bttm-0">
+            <form id="gc-pg-hlpfl-frm" action="https://www.canada.ca/gc/services/generateemail" method="post" autocomplete="off" class="provisional wb-postback" data-wb-postback="{&quot;success&quot;:&quot;.gc-pg-hlpfl-thnk&quot;,&quot;content&quot;:&quot;#gc-pg-hlpfl-frm&quot;}">
+              <input type="hidden" name="institutionopt" value="CRA">
+              <input type="hidden" name="themeopt" value="Taxes">
+              <input type="hidden" name="sectionopt" value="FHSA">
+              <input type="hidden" name="pageTitle" value="First Home Savings Account (FHSA)">
+              <input type="hidden" name="emailTemplate" value="servcan/gc-pagesuccessen">
+              <div class="gc-pg-hlpfl-btn">
+                <div class="row row-no-gutters">
+                  <div class="col-xs-12 col-sm-7 mrgn-tp-sm">
+                    <h2 class="mrgn-tp-sm h5">Did you find what you were looking for?</h2>
+                  </div>
+                  <div class="col-xs-8 col-sm-5 text-right">
+                    <button type="submit" name="helpful" value="Yes" class="btn btn-primary" data-gc-analytics-wtph>Yes</button>
+                    <button type="button" class="btn btn-primary mrgn-lft-sm nojs-hide" data-wb-doaction="[									{&quot;action&quot;:&quot;removeClass&quot;,&quot;source&quot;:&quot;.gc-pg-hlpfl-no&quot;,&quot;class&quot;:&quot;nojs-show&quot;},
+									{&quot;action&quot;:&quot;addClass&quot;,&quot;source&quot;:&quot;.gc-pg-hlpfl-btn&quot;,&quot;class&quot;:&quot;hide&quot;}]" data-gc-analytics-wtph-no>No</button>
+                  </div>
+                </div>
+              </div>
+              <p class="h3 hidden nojs-show">If not, tell us why:</p>
+              <div class="gc-pg-hlpfl-no nojs-show">
+                <fieldset>
 <legend class="h4 mrgn-tp-0 mrgn-bttm-md">Please share your feedback</legend>
-
-<div class="radio">
-<label for="problem1">
-<input name="problem" id="problem1" type="radio" value="I can't find the information" data-gc-analytics-wtph-value="I can't find the information-Je ne peux pas trouver l'information" data-gc-analytics-collect="notPrivate">I can't <strong>find</strong> the information
-</label>
-</div>
-
-<div class="radio">
-<label for="problem2">
-<input name="problem" id="problem2" type="radio" value="The information is hard to understand" data-gc-analytics-wtph-value="The information is hard to understand-L'information est difficile à comprendre" data-gc-analytics-collect="notPrivate"> The information is hard to <strong>understand</strong>
-</label>
-</div>
-
-<div class="radio">
-<label for="problem3">
-<input name="problem" id="problem3" type="radio" value="There was an error / something didn't work" data-gc-analytics-wtph-value="There was an error or something didn't work-Il y avait une erreur ou quelque chose ne fonctionnait pas" data-gc-analytics-collect="notPrivate"> There was an error or something <strong>didn't work</strong>
-</label>
-</div>
-
-<div class="radio">
-<label for="problem4">
-<input name="problem" id="problem4" type="radio" value="Other reason" data-gc-analytics-wtph-value="Other reason-Autre raison" data-gc-analytics-collect="notPrivate">
-Other reason
-</label>
-</div>
-</fieldset>
-<label for="problem6" class="mrgn-bttm-0">Please provide more details</label>
-<p class="small">
-<strong>You will not receive a reply. Telephone numbers and email addresses will be removed.</strong>
-<br><span class="small">Maximum 300 characters</span>
-</p>
-<textarea id="problem6" name="details" class="full-width" maxlength="300"></textarea>
-<button type="submit" name="helpful" value="No" class="btn btn-primary mrgn-tp-md mrgn-bttm-sm" data-gc-analytics-wtph-submit>Submit</button>
-</div>
-<input type="hidden" name="problem" value="">
-</form>
-<div class="gc-pg-hlpfl-thnk hide">
-<p class="h6 mrgn-tp-sm mrgn-bttm-sm"><span class="far fa-check-circle text-success mrgn-rght-sm" aria-hidden="true"></span> Thank you for your feedback</p>
-</div>
-</div>
-</section>
-</div>
-<div class="col-sm-3 col-sm-offset-1 col-lg-offset-3">
-<div class="wb-share" data-wb-share="{&quot;pnlId&quot;:&quot;pnlShrPg&quot;, &quot;lnkClass&quot;: &quot;btn btn-default btn-block mrgn-tp-md&quot;}"></div>
-</div>
-</div>
-
-
-</div>
-         <!-- Write closure template -->
-         <script type="text/javascript">
-            var defPreFooter = document.getElementById("def-preFooter");
-            defPreFooter.outerHTML = wet.builder.preFooter({
-            dateModified: "2020-05-05",
-            showPostContent: true,
-            showFeedback: true,
-            showShare: true
-            });
-         </script>
-      </main>
-      <div id="def-footer">
+                  <div class="radio">
+                    <label for="problem1">
+                      <input name="problem" id="problem1" type="radio" value="I can't find the information" data-gc-analytics-wtph-value="I can't find the information-Je ne peux pas trouver l'information" data-gc-analytics-collect="notPrivate">I can't <strong>find</strong> the information 
+		      </label>
+                  </div>
+                  <div class="radio">
+                    <label for="problem2">
+                      <input name="problem" id="problem2" type="radio" value="The information is hard to understand" data-gc-analytics-wtph-value="The information is hard to understand-L'information est difficile à comprendre" data-gc-analytics-collect="notPrivate">The information is hard to <strong>understand</strong> 
+		      </label>
+                  </div>
+                  <div class="radio">
+                    <label for="problem3">
+                      <input name="problem" id="problem3" type="radio" value="There was an error / something didn't work" data-gc-analytics-wtph-value="There was an error or something didn't work-Il y avait une erreur ou quelque chose ne fonctionnait pas" data-gc-analytics-collect="notPrivate">There was an error or something <strong>didn't work</strong> 
+		      </label>
+                  </div>
+                  <div class="radio">
+                    <label for="problem4">
+                      <input name="problem" id="problem4" type="radio" value="Other reason" data-gc-analytics-wtph-value="Other reason-Autre raison" data-gc-analytics-collect="notPrivate">
+                      Other reason 
+		      </label>
+                  </div>
+                </fieldset>
+                <label for="problem6" class="mrgn-bttm-0">Please provide more details</label>
+                <p class="small"> <strong>You will not receive a reply. Telephone numbers and email addresses will be removed.</strong> <br>
+                  <span class="small">Maximum 300 characters</span> </p>
+                <textarea id="problem6" name="details" class="full-width" maxlength="300"></textarea>
+                <button type="submit" name="helpful" value="No" class="btn btn-primary mrgn-tp-md mrgn-bttm-sm" data-gc-analytics-wtph-submit>Submit</button>
+              </div>
+              <input type="hidden" name="problem" value="">
+            </form>
+            <div class="gc-pg-hlpfl-thnk hide">
+              <p class="h6 mrgn-tp-sm mrgn-bttm-sm"><span class="far fa-check-circle text-success mrgn-rght-sm" aria-hidden="true"></span> Thank you for your feedback</p>
+            </div>
+          </div>
+        </section>
       </div>
-      <!-- Write closure template -->
-      <script type="text/javascript">
-         var defFooter = document.getElementById("def-footer");
-         defFooter.outerHTML = wet.builder.footer({
-         showFooter: true,
-         showFeatures: true
-         });
-      </script>
-      <!-- Write closure template -->
-      <script type="text/javascript">
-         document.write(wet.builder.refFooter({
-         }));
-      </script>
-      <script src="https://test.canada.ca/covid-19-guidance/proto/js/alpha-banner.js"></script>
-   </body>
+      <div class="col-sm-3 col-sm-offset-1 col-lg-offset-3">
+        <div class="wb-share" data-wb-share="{&quot;pnlId&quot;:&quot;pnlShrPg&quot;, &quot;lnkClass&quot;: &quot;btn btn-default btn-block mrgn-tp-md&quot;}"></div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="pagedetails">
+      <dl id="wb-dtmd">
+        <dt>Date modified:</dt>
+        <dd>
+          <time property="dateModified">2020-05-05</time>
+        </dd>
+      </dl>
+    </div>
+  </div>
+</main>
+<footer>
+  <div id="wb-info">
+    <div class="landscape">
+      <nav class="container wb-navcurr">
+        <h2 class="wb-inv">About government</h2>
+        <ul class="list-unstyled colcount-sm-2 colcount-md-3">
+          <li><a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">Contact us</a></li>
+          <li><a href="https://www.canada.ca/en/government/dept.html">Departments and agencies</a></li>
+          <li><a href="https://www.canada.ca/en/government/publicservice.html">Public service and military</a></li>
+          <li><a href="https://www.canada.ca/en/news.html">News</a></li>
+          <li><a href="https://www.canada.ca/en/government/system/laws.html">Treaties, laws and regulations</a></li>
+          <li><a href="https://www.canada.ca/en/transparency/reporting.html">Government-wide reporting</a></li>
+          <li><a href="http://pm.gc.ca/eng">Prime Minister</a></li>
+          <li><a href="https://www.canada.ca/en/government/system.html">How government works</a></li>
+          <li><a href="http://open.canada.ca/en/">Open government</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="brand">
+      <div class="container">
+        <div class="row">
+          <nav class="col-md-10 ftr-urlt-lnk">
+            <h2 class="wb-inv">About this site</h2>
+            <ul>
+              <li><a href="https://www.canada.ca/en/social.html">Social media</a></li>
+              <li><a href="https://www.canada.ca/en/mobile.html">Mobile applications</a></li>
+              <li><a href="https://www.canada.ca/en/government/about.html">About Canada.ca</a></li>
+              <li><a href="https://www.canada.ca/en/transparency/terms.html">Terms and conditions</a></li>
+              <li><a href="https://www.canada.ca/en/revenue-agency/corporate/privacy-notice.html">Privacy</a></li>
+            </ul>
+          </nav>
+          <div class="col-xs-6 visible-sm visible-xs tofpg"> <a href="#wb-cont">Top of page <span class="glyphicon glyphicon-chevron-up"></span></a> </div>
+          <div class="col-xs-6 col-md-2 text-right">
+            <object type="image/svg+xml" tabindex="-1" role="img" data="https://www.canada.ca/etc/designs/canada/wet-boew/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada">
+            </object>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+<script type="text/javascript">_satellite.pageBottom();</script> 
+<script src="https://www.canada.ca/etc.clientlibs/clientlibs/granite/jquery.min.js"></script> 
+<script src="https://www.canada.ca/etc.clientlibs/clientlibs/granite/utils.min.js"></script> 
+<script src="https://www.canada.ca/etc/designs/canada/clientlib-publish.min.js"></script> 
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> 
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script> 
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script> 
+<script>
+/*Binds a navigation button for keyboard/screen readers to skip to the section navigation menu at the top of the template page */
+		(function( $, document, wb ) {
+	"use strict";
+if($('.gcnav-menu').length> 0){
+	var pgLang = $("html").prop("lang");
+	/*Language change */
+	switch( pgLang.toLowerCase() ){
+		case "fr":
+			var gcNav = 'Passer au menu de navigation de la section'
+			break;
+		case "en":
+		default:
+			var gcNav = 'Skip to section navigation menu'
+			break;
+		}
+	
+	/*HTML code to inject */
+	$( "#wb-tphp" ).prepend('<li class="wb-slc"><a class="wb-sl" href="#wb-cont-parent">' + gcNav + '</a></li>' );
+}
+})( jQuery, document, wb );		
+</script> 
+<script src="https://test.canada.ca/covid-19-guidance/proto/js/alpha-banner.js"></script>
+</body>
 </html>
