--- a/fhsa/v4/lifeevents.html
+++ b/fhsa/v4/lifeevents.html
@@ -213,9 +213,9 @@ Death and FHSAs</h1>
 <p>After you become the successor holder of the FHSA, the normal transfer and withdrawal rules will apply. For more information, go to&nbsp;<a href="/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/transferring-funds-between-fhsas-other-registered-plans.html">Transfers between FHSAs and other registered plans</a> and <a href="/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/withdrawing-money-from-your-fhsa.html">Withdrawals from your FHSAs</a>.</p>
 <p>If the deceased holder had an excess FHSA amount at the time of their death, special rules will apply. <span class="label label-info">Information about these rules will be available at a later date.</span></p>
 <ul class="list-unstyled">
-<li><details><summary>Example – Survivor who decides to keep the FHSA</summary><p>When Antonio opened his FHSA on May 1, 2023, he designated his spouse, Ida, as the successor holder of his FHSA. Antonio died on October 13, 2023. Antonio did not have an excess FHSA amount on the date of his death.</p>
+<li><details><summary>Example: Survivor who decides to keep the FHSA</summary><p>When Antonio opened his FHSA on May 1, 2023, he designated his spouse, Ida, as the successor holder of his FHSA. Antonio died on October 13, 2023. Antonio did not have an excess FHSA amount on the date of his death.</p>
 <p>When Antonio died, Ida was a qualifying individual and decided to keep Antonio’s FHSA. Ida did not have her own FHSA at the time of Antonio’s death, therefore, the start of her maximum participation period would be October 13, 2023.</p>
-</details> <details><summary>Example – Survivor who decides to not keep the FHSA</summary><p>Nicole is the holder of an FHSA who died on September 1, 2023. Prior to her death, Nicole designated her common-law partner, Kenneth, as the successor holder of her FHSA. Nicole did not have an excess FHSA amount on the date of her death.</p>
+</details> <details><summary>Example: Survivor who decides to not keep the FHSA</summary><p>Nicole is the holder of an FHSA who died on September 1, 2023. Prior to her death, Nicole designated her common-law partner, Kenneth, as the successor holder of her FHSA. Nicole did not have an excess FHSA amount on the date of her death.</p>
 <p>At the time of Nicole’s death, Kenneth was a qualifying individual but he did not want to keep the FHSA. He decided that he wanted to receive all the <a href="#propfhsa" aria-controls="propfhsa" class="wb-lbx" role="button">property&nbsp;<span class="far fa-question-circle"></span></a> of the FHSA as a taxable withdrawal and to close the FHSA.</p>
 <p>On October 5, 2023, Kenneth made a taxable withdrawal of all the property of the FHSA. Kenneth will have to report the amount withdrawn as income and can claim the tax withheld as a credit towards any tax owing on his 2023 income tax and benefit return.</p>
 </details></li>
@@ -253,7 +253,7 @@ Death and FHSAs</h1>
 <p>Any amounts you receive as a taxable distribution from the FHSA will have to be included as income on your income tax and benefit return for the year received. These amounts will be subject to income tax withholding and can be claimed on your income tax and benefit return as a credit towards any tax owing for the year received.</p>
 <p>If the deceased holder had an excess FHSA amount at the time of their death, special rules may apply. <span class="label label-info">Information about these rules will be available at a later date.</span></p>
 <ul class="list-unstyled">
-<li><details><summary>Example – survivor who is not a qualifying individual</summary><p>Brad is the holder of an FHSA who died in August 2023. Prior to his death, Brad designated his spouse, Kyle, as the successor holder of his FHSA. Brad did not have an excess FHSA amount on the date of his death.</p>
+<li><details><summary>Example: survivor who is not a qualifying individual</summary><p>Brad is the holder of an FHSA who died in August 2023. Prior to his death, Brad designated his spouse, Kyle, as the successor holder of his FHSA. Brad did not have an excess FHSA amount on the date of his death.</p>
 <p>Kyle has been a non-resident of Canada since January 2023, therefore, he is not considered to be a qualifying individual and cannot become the holder of the FHSA. Kyle must transfer or withdraw all of the property of the FHSA by the end of the day on December 31, 2024.</p>
 <p>Kyle decided to fill out the transfer form to complete a direct transfer of all the property of the FHSA to his own RRSP. The direct transfer of all of the property of the FHSA to Kyle’s RRSP was completed in December 2023. This transfer has no immediate tax consequences for Kyle.</p>
 </details></li>
@@ -337,7 +337,7 @@ Death and FHSAs</h1>
 <div class="alert alert-info"><p>In order to make a joint designation, the <a href="#propfhsa" aria-controls="propfhsa" class="wb-lbx" role="button">property&nbsp;<span class="far fa-question-circle"></span></a> from the FHSA must be distributed to the estate before the end of the <a href="#exemptperiod" aria-controls="exemptperiod" class="wb-lbx" role="button">exempt period&nbsp;<span class="far fa-question-circle"></span></a>.</p>
 </div>
 <ul class="list-unstyled">
-<li><details><summary>Example – Joint designation of a transfer</summary><p>Horace is the holder of an FHSA who died on June 25, 2023. The FHSA contract designated his estate as the sole beneficiary. His wife, Audrey, was a beneficiary of the estate. Horace did not have an excess FHSA amount at the time of his death.</p>
+<li><details><summary>Example: Joint designation of a transfer</summary><p>Horace is the holder of an FHSA who died on June 25, 2023. The FHSA contract designated his estate as the sole beneficiary. His wife, Audrey, was a beneficiary of the estate. Horace did not have an excess FHSA amount at the time of his death.</p>
 <p>All of the property of Horace’s FHSA was distributed to his estate on August 5, 2023. Horace’s FHSA had an FMV of $8,000 immediately before the distribution occurred.</p>
 <p>On September 3, 2023, Audrey and the legal representative of Horace’s estate determined that Audrey was entitled to $3,000 of the FHSA from the estate. They completed a prescribed form and jointly elected to have the $3,000 treated as a deemed transfer from Horace’s FHSA (not from the estate) to Audrey’s RRSP. The transfer was completed on September 7, 2023.</p>
 <p>As a result of the joint designation, the $3,000 was treated as a tax-deferred transfer from Horace’s FHSA to Audrey’s RRSP. There were no immediate tax consequences for Audrey.</p>
@@ -345,7 +345,7 @@ Death and FHSAs</h1>
 </details></li>
 </ul>
 <ul class="list-unstyled">
-<li><details><summary>Example – Joint designation of a distribution</summary><p>Sakura is the holder of an FHSA who died on November 15, 2023. The FHSA contract designated her estate as the sole beneficiary. Her husband, Bob, was a beneficiary of the estate. Sakura did not have an excess FHSA amount at the time of her death.</p>
+<li><details><summary>Example: Joint designation of a distribution</summary><p>Sakura is the holder of an FHSA who died on November 15, 2023. The FHSA contract designated her estate as the sole beneficiary. Her husband, Bob, was a beneficiary of the estate. Sakura did not have an excess FHSA amount at the time of her death.</p>
 <p>All of the property in Sakura’s FHSA was distributed to her estate on January 10, 2024. Sakura’s FHSA had an FMV of $8,100 immediately before the distribution occurred. On February 1, 2024, $5,000 from Sakura’s estate was paid out to Bob.</p>
 <p>Bob and the legal representative of Sakura’s estate filled out a prescribed form and jointly elected to treat the $5,000 as a deemed distribution from the FHSA (not from the estate).</p>
 <p>As a result of the joint designation, Bob reported the $5,000 that he received as income when he filed his 2024 income tax and benefit return.</p>
@@ -448,7 +448,7 @@ Death and FHSAs</h1>
       
           <li>
               <details>
-                  <summary>Example – Beneficiary distribution</summary>
+                  <summary>Example: Beneficiary distribution</summary>
                   <div class="mwsbodytext text parbase section">
   
 
@@ -506,7 +506,7 @@ Death and FHSAs</h1>
   
 
   <details>
-      <summary>Example</summary>
+      <summary>Example: Closing an FHSA after death</summary>
       <div class="mwsbodytext text parbase section">
   
 
