--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -374,12 +374,12 @@
 
 		 <div class="alert alert-info hidden provisional" id="action-not-qualify-msg">
                     <h3>You need all of the above to make a qualifying withdrawal</h3>
-			  <p>If you do not meet all of the conditions above you would not be a qualifying individual and could not open an FHSA.</p>
+			  <p>You may be a first-time home buyer for the purpose of opening an FHSA.</p>
                   </div>
                   <div class="alert alert-success hidden provisional" id="action-qualify-msg">
                     <p>Based on your selections above:</p>
-			  <h3>You may qualify to open an FHSA</h3>
-			  <p>If you meet the conditions above you would be a qualifying individual and can open an FHSA.</p>
+			  <h3>You may be a first-time home buyer for the purpose of opening an FHSA.</h3>
+			  <p><strong>Next:</strong> Check if you meet the additional criteria for opening an FHSA."</p>
                   </div>
 
 		 <h3>Additional criteria for opening an FHSA account</h3>
