--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -378,7 +378,8 @@
                   </div>
                   <div class="alert alert-success hidden provisional" id="action-qualify-msg">
                     <p>Based on your selections above:</p>
-			  <h3>You may be a first-time home buyer for the purpose of opening an FHSA.</h3>
+			  <h3>You meet the criteria</h3>
+			  <p>You may be a first-time home buyer for the purpose of opening an FHSA.</p>
 			  <p><strong>Next:</strong> Check if you meet the additional criteria for opening an FHSA."</p>
                   </div>
 
