--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -373,14 +373,15 @@
 		 </fieldset>
 
 		 <div class="alert alert-info hidden provisional" id="action-not-qualify-msg">
-                    <h3>You need all of the above to make a qualifying withdrawal</h3>
-			  <p>You may be a first-time home buyer for the purpose of opening an FHSA.</p>
+                    <p>Based on your selections above:</p>
+                    <h3>You need all of the above to qualify to open a FHSA</h3>
+                    <p>You are not a qualifying first-time home buyer for the purpose of opening an FHSA.</p>
                   </div>
                   <div class="alert alert-success hidden provisional" id="action-qualify-msg">
                     <p>Based on your selections above:</p>
 			  <h3>You meet the criteria</h3>
 			  <p>You may be a first-time home buyer for the purpose of opening an FHSA.</p>
-			  <p><strong>Next:</strong> Check if you meet the additional criteria for opening an FHSA."</p>
+			  <p><strong>Next:</strong> Check if you meet the additional criteria for opening an FHSA.</p>
                   </div>
 
 		 <h3>Additional criteria for opening an FHSA account</h3>
