--- a/fhsa/v4/lifeevents.html
+++ b/fhsa/v4/lifeevents.html
@@ -112,7 +112,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
 </details></div>
 </div>
 
- <h3><a id="h-1-2">Exempt period after a holder's death</a></h3> 
+ <h3><a id="h-1-1">Exempt period after a holder's death</a></h3> 
 <p>An exempt period begins when the holder dies and ends on December 31 of the same year, or when the trust ceases to exist, if earlier.</p>
 
 
@@ -147,7 +147,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
   
 
   
-      <h2><a id="h_3"></a>Survivors</h2>
+      <h3><a id="h-2-1"></a>Survivors</h3>
 <p>If you are a <a href="#spouse" aria-controls="spouse" class="wb-lbx" role="button">spouse&nbsp;<span class="far fa-question-circle"></span></a> or <a href="#comlaw" aria-controls="comlaw" class="wb-lbx" role="button">common-law partner&nbsp;<span class="far fa-question-circle"></span></a> of the deceased holder immediately before their death, you are a <strong>survivor</strong> of the deceased holder. If you are a survivor, you may have been designated as the <a href="#successorholder" aria-controls="successorholder" class="wb-lbx" role="button">successor holder&nbsp;<span class="far fa-question-circle"></span></a> or a beneficiary in the FHSA contract or in the deceased holder’s will.</p>
 
   
@@ -349,10 +349,10 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
   
 
   
-      <h2><a id="h_4"></a>Beneficiaries other than survivors</h2>
+      <h3><a id="h-2-2"></a>Beneficiaries other than survivors</h3>
 <p>The holder of an FHSA can designate any person or <a href="#qualdonee" aria-controls="qualdonee" class="wb-lbx" role="button">qualified donee&nbsp;<span class="far fa-question-circle"></span></a> (for example, a registered charity) as a beneficiary of their FHSA.</p>
 <p>If the deceased holder had an excess FHSA amount at the time of their death, special rules may apply. <span class="label label-info">Information about these rules will be available at a later date.</span></p>
-<h3><a id="r_3"></a>Reporting during the exempt period<br></h3>
+<h4><a id="r_3"></a>Reporting during the exempt period<br></h4>
 <p>If you are a beneficiary (other than a survivor) of a deceased holder’s FHSA, any amounts you receive from the FHSA during the exempt period must be included as income on your income tax and benefit return for the year received. These amounts will be subject to income tax withholding and can be claimed on your income tax and benefit return as a credit towards any tax owing for the year received.</p>
 
   
@@ -443,7 +443,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
   
 
   
-      <h3>Reporting after the exempt period</h3>
+      <h4>Reporting after the exempt period</h4>
 <p>The FHSA will lose its status as an FHSA at the end of the exempt period. The tax treatment of any income earned in the deceased holder’s account after the exempt period depends on the type of FHSA it was. If you do not know the type of FHSA the deceased had, ask the financial institution managing the FHSA if it was a depositary, trusteed or insured FHSA.</p>
 <dl class="dl-horizontal">
 <dt>Depositary FHSA</dt> <dd><p>Any income earned in the deceased holder’s depositary account after the exempt period and paid to the designated beneficiaries, or the deceased’s estate if there is no designated beneficiary, should be reported in accordance with normal taxation rules.</p>
@@ -460,7 +460,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
   
 
   
-      <h2><a id="h_5"></a>Closing the FHSAs after death</h2>
+      <h2><a id="h_3"></a>Closing the FHSAs after death</h2>
 <p>After the death of the last FHSA holder, all FHSAs should be closed by the end of the exempt period. If the account is not closed by the end of the exempt period, the account will cease to be an FHSA.&nbsp;</p>
 <p>If there is property remaining in the FHSA at the end of the exempt period, each beneficiary of the FHSA must include in their income for that year the proportion of the FMV of all the remaining property in the FHSA to which that beneficiary is entitled.</p>
 
