--- a/fhsa/v4/lifeevents.html
+++ b/fhsa/v4/lifeevents.html
@@ -370,9 +370,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
 
 
 
-<div class="alert alert-info">
-<p>Where there are no designated beneficiaries in the FHSA contract or in the deceased holder’s will, the amounts from the FHSA will be paid to the estate.</p>
-</div>
+
 
 
 
@@ -381,7 +379,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
   
 
   
-      <p>If there is property remaining in the FHSA at the end of the exempt period, each beneficiary of the FHSA is required to include in their income for that year the proportion of the FMV of all of the remaining property in the FHSA that the beneficiary is entitled to.</p>
+      <p>If there is property remaining in the FHSA at the end of the exempt period, each beneficiary of the FHSA is required to include in their income for that year the proportion of the fair market value (FMV) of all of the remaining property in the FHSA that the beneficiary is entitled to.</p>
 
   
 
